# RoadTripPlanner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  add_db_data.py  config.py  log_manager.py  login_manager_helper_functions.py  main.py  map_requests.py  models.py  pyproject.toml  replit_zip_error_log.txt  routes.py  routing_helper_functions.py  run.py  travel_app_tree.txt
.github/workflows/: ruff.yml
app/: __init__.py  forms.py  log_manager.py  login_manager_helper_functions.py  map_requests.py  models.py  routing_helper_functions.py
app/auth/: routes.py
app/dashboard/: __init__.py  routes.py
app/places/: __init__.py  routes.py
app/scraping_functions/: gas_price_extractor.py  population.py  population_dictionary.py  regex_wiki.py
app/templates/: 404.html  profile_travels.html  schema_diagram.html
app/travel/: __init__.py  routes.py
app/user_profile/: __init__.py  routes.py
app/utility/: __init__.py  routes.py
chat_gpt_tools/: GPT_README.md  gpt.py  open_ai_api_config.py
scraping_functions/: gas.py  gas_price_extractor.py  population.py  population_dictionary.py  wiki_places.py
scripts/: add_db_data.py
src/: __init__.py  forms.py  login_manager_helper_functions.py  map_requests.py  models.py  routes.py  routing_helper_functions.py  views.py
src/auth/: routes.py
src/chat_gpt_tools/: gpt.py  open_ai_api_config.py  postprocess.py  testdriver.py
src/dashboard/: routes.py
src/places/: routes.py
src/scraping_functions/: gas.py  gas_price_extractor.py  population.py  proposed_changes_TONY.py  regex_wiki.py  state_abbreviations.py  wiki_places.py
src/static/: style.css
src/templates/: _base.html  dashboard.html  login.html  profile.html  profile_travels.html  schema_diagram.html  users.html
src/travel/: routes.py
src/user_profile/: routes.py
src/utility/: routes.py
templates/: 404.html  login.html  place.html  place_sum.html  profile.html  registration.html  users.html  welcome_page.html
tests/: test_map_requests.py
